--- a/index.html
+++ b/index.html
@@ -3,79 +3,80 @@
 <head>
 <meta charset="UTF-8">
 <title>Relatório Técnico – Contratações e Enviesamento</title>
+
+<!-- Fonte Google Roboto -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
 <style>
     body {
-        font-family: Arial, sans-serif;
+        font-family: 'Roboto', Arial, sans-serif;
         color: #333;
         margin: 0;
         padding: 0;
-        background-color: #f5f5f5;
+        background-color: #f1f4f8;
     }
 
-    /* Cabeçalho alinhado com o container */
     .header {
         background-color: #27628d;
         color: white;
-        padding: 15px 0;
+        padding: 20px 0;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.2);
     }
     .header-content {
-        max-width: 900px;   /* mesmo do container */
+        max-width: 900px;
         margin: auto;
-        padding: 0 30px;    /* mesmo padding lateral do container */
-    }
-    .header-text {
-        font-size: 14px;
-        line-height: 1.6;
+        padding: 0 30px;
     }
     .header-text strong {
-        font-size: 16px;
+        font-size: 17px;
         display: block;
         margin-bottom: 5px;
     }
-
     .container {
         padding: 30px;
         max-width: 900px;
-        margin: auto;
+        margin: 30px auto;
         background-color: white;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+        border-radius: 6px;
     }
 
     h1, h2 {
         color: #27628d;
+        margin-top: 25px;
+        font-weight: 600;
     }
 
-    /* Tabela com cores por coluna */
     table {
         width: 100%;
         border-collapse: collapse;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin: 20px 0;
     }
     th, td {
         border: 1px solid #27628d;
-        padding: 10px;
+        padding: 12px;
         text-align: left;
+        font-size: 14px;
     }
     th {
         background-color: #27628d;
         color: white;
+        font-weight: 500;
     }
-    .pros {
-        color: #2e7d32;             /* verde profissional */
-        font-weight: bold;
-    }
-    .risk {
-        color: #b33a3a;             /* vermelho sutil */
-        font-weight: bold;
+    tbody tr:hover {
+        background-color: #f0f6fb;
+        cursor: pointer;
+        transition: background 0.2s;
     }
 
-    /* Barras visuais p/ indicadores */
+    .pros { color: #2e7d32; font-weight: bold; }
+    .risk { color: #b33a3a; font-weight: bold; }
+
     .bar-bg {
         background-color: #e0e0e0;
         height: 18px;
         border-radius: 5px;
         margin-bottom: 8px;
-        position: relative;
     }
     .bar-fill {
         height: 18px;
@@ -88,6 +89,7 @@
         background-color: #edf3f7;
         padding: 15px;
         margin-top: 20px;
+        border-radius: 5px;
     }
 
     footer {
@@ -96,11 +98,15 @@
         text-align: center;
         padding: 15px;
         font-size: 12px;
-        margin-top: 30px;
+        margin-top: 40px;
     }
-    a {
-        color: white;
+    footer a {
+        color: #dce9f2;
         text-decoration: underline;
+        transition: color 0.2s;
+    }
+    footer a:hover {
+        color: #ffffff;
     }
 </style>
 </head>
